--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML Table Reference</title>
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <h1>html table reference</h1>
     <h2>Table Tags</h2>
+
     <table>
       <thead>
         <tr>
@@ -19,39 +27,40 @@
       </thead>
       <tbody>
         <tr>
-          <td><code>table</code></td>
+          <td><code>&lt;table&gt;</code></td>
           <td>Table</td>
           <td>The wrapper element for all HTML tables.</td>
         </tr>
         <tr>
-          <td><code>thead</code></td>
+          <td><code>&lt;thead&gt;</code></td>
           <td>Table Head</td>
           <td>The set of rows defining the column headers in a table.</td>
         </tr>
         <tr>
-          <td><code>tbody</code></td>
+          <td><code>&lt;tbody&gt;</code></td>
           <td>Table Body</td>
           <td>The set of rows containing actual table data.</td>
         </tr>
         <tr>
-          <td><code>tr</code></td>
+          <td><code>&lt;tr&gt;</code></td>
           <td>Table Row</td>
           <td>The table row container.</td>
         </tr>
         <tr>
-          <td><code>td</code></td>
+          <td><code>&lt;td&gt;</code></td>
           <td>Table Data</td>
           <td>The table data element.</td>
         </tr>
         <tr>
-          <td><code>tfoot</code></td>
-          <td>Table Foot</td>
+          <td><code>&lt;tfoot&gt;</code></td>
+          <td>&lt;Table Foot&gt;</td>
           <td>The set of rows defining the footer in a table.</td>
         </tr>
       </tbody>
     </table>
 
     <h2>Table Attributes</h2>
+
     <table>
       <thead>
         <tr>
