--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </tr>
         <tr>
           <td><code>&lt;tfoot&gt;</code></td>
-          <td>&lt;Table Foot&gt;</td>
+          <td>Table Foot</td>
           <td>The set of rows defining the footer in a table.</td>
         </tr>
       </tbody>
